# codescanner

./: .gitignore  README.md  claude.md  main.py  pyproject.toml  requirements.txt
.chainlink/: issues.db  session.json
src/gui/: app.py
src/scanner/: __init__.py  engine.py  models.py  report.py
src/scanner/engines/: __init__.py  bandit_engine.py  base.py  brakeman_engine.py  checkov_engine.py  gemini_engine.py  gitleaks_engine.py  gosec_engine.py  grype_engine.py  hadolint_engine.py  horusec_engine.py  phpstan_engine.py  safety_engine.py  semgrep_engine.py  shellcheck_engine.py  spotbugs_engine.py  trivy_engine.py  trufflehog_engine.py
